--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 axum = "0.7.5"
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+diesel = { version = "2.2.0", features = ["postgres"] }
+dotenvy = "0.15"
 
 [[bin]]
 name = "backend"
