--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,13 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-dotenvy = "0.15"
-axum = { version = "0.7.5", features = ["tracing"] }
+dotenvy = "0.15.7"
+axum = { version = "0.7.5", features = ["tracing", "json"] }
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
-diesel = { version = "2.2.0", features = ["postgres"] }
+tower-http = { version = "0.5.2", features = ["trace"] }
+diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
+diesel_migrations = { version = "2.2.0", features = ["postgres"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-tower-http = { version = "0.5.2", features = ["trace"] }
+anyhow = "1.0.88"
+serde = { version = "1.0.210", features = ["derive"] }
 
 [[bin]]
 name = "backend"
