--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,15 +5,17 @@ edition = "2021"
 
 [dependencies]
 dotenvy = "0.15.7"
+anyhow = "1.0.88"
 axum = { version = "0.7.5", features = ["tracing", "json"] }
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
 diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
 diesel_migrations = { version = "2.2.0", features = ["postgres"] }
+diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-anyhow = "1.0.88"
 serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
 
 [[bin]]
 name = "backend"
