--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@nuxt/eslint": "^0.5.5",
     "@nuxt/fonts": "^0.7.2",
+    "@pinia/nuxt": "^0.5.4",
     "@primevue/nuxt-module": "^4.0.5",
     "@primevue/themes": "^4.0.5",
     "@unocss/nuxt": "^0.62.3",
