--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,4 +1,3 @@
-.output
 node_modules
 
 Dockerfile*
@@ -8,4 +7,4 @@ README.md
 .prettierrc.json
 eslint.config.mjs
 drizzle.config.ts
-.env.local
+.env.development
