--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,1 +1,6 @@
 DATABASE_URL=postgres://postgres:password@localhost:5432/applica_db
+
+LDAP_URL=ldap://localhost:389
+LDAP_BASE_DN=dc=applica,dc=com
+LDAP_ADMIN_PASSWORD=admin
+LDAP_LEADER_DN=cn=fieldleader,ou=group,$LDAP_BASE_DN
