--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.6.2",
+    "ldapts": "^7.2.1",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
   },
