--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,15 @@ services:
     environment:
       - DATABASE_URL=postgres://postgres:password@postgres:5432/applica_db
       - LDAP_URL=${LDAP_URL}
+      - LDAP_BASE_DN=${LDAP_BASE_DN}
+      - LDAP_ADMIN_PASSWORD=${LDAP_ADMIN_PASSWORD}
+      - JWT_SECRET=${JWT_SECRET}
     depends_on:
       - postgres
     profiles:
       - prod
+    env_file:
+      - .env.prod
 
   postgres:
     image: postgres:16.4
@@ -45,13 +50,14 @@ services:
     environment:
       LDAP_ORGANISATION: "Applica"
       LDAP_DOMAIN: "applica.com"
-      LDAP_ADMIN_PASSWORD: "admin"
     ports:
       - "389:389"
       - "636:636"
     volumes:
       - ldap_data:/var/lib/ldap
       - ldap_config:/etc/ldap/slapd.d
+      - ./bootstrap.ldif:/container/service/slapd/assets/config/bootstrap/ldif/custom/bootstrap.ldif
+    command: --copy-service
     profiles:
       - dev
 
