feat(backend): remove POST /applications from guard and improve docker setup

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# This .env file shows all the necessary variables you need to set in your
-# .env.prod file for a production deployment
+# This .env file is supposed to be used during production
+# Make sure to REPLACE the placeholders with your real values
 
 # Use internal LDAP server by default
 # When you want to use an external LDAP server, change the URL to the external server:
