--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - LDAP_URL=${LDAP_URL}
       - LDAP_BASE_DN=${LDAP_BASE_DN}
       - LDAP_ADMIN_PASSWORD=${LDAP_ADMIN_PASSWORD}
+      - LDAP_LEADER_DN=${LDAP_LEADER_DN}
       - JWT_SECRET=${JWT_SECRET}
     depends_on:
       - postgres
