--- a/backend/.env.development
+++ b/backend/.env.development
@@ -7,3 +7,9 @@ LDAP_BASE_DN=dc=applica,dc=com
 LDAP_ADMIN_PASSWORD=admin
 LDAP_LEADER_DN=cn=fieldleader,ou=group,$LDAP_BASE_DN
 JWT_SECRET=verysecret
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your-email@example.com
+SMTP_PASS=your-email-password
+SMTP_FROM_NAME=Applica Admin
+SMTP_FROM_EMAIL=your-email@example.com
